ERSKY9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 25-APR-2011
description here
====================================================================================

******************************************
CHANGELOG: 18-Sep-2012  MPB
Voice file reading improved
Voice output scheduling changed

******************************************
CHANGELOG: 15-Sep-2012  MPB
Add 3POS as mixer input
Fix altitude voice feet/metres
Extra AND switches on custom switches changed
Fix Condensed bug on LCD
Sync. custom timer to AND switch
Changed Ymodem for testing

******************************************
CHANGELOG: 07-Sep-2012  MPB
Fix voice bug.
Add version number to model EEPROM

******************************************
CHANGELOG: 05-Sep-2012  MPB
Improve cell voltage handling
Move USB detection code to allow applet initialisation to work
Fix bug in getValue() re timers and battery
Correct FAS100 voltage scaling 

******************************************
CHANGELOG: 31-Aug-2012  MPB
voice_numeric - add thousands and 2 decimals - needs new/changed voice files
Correct startup timing for Optrex LCD
Bluetooth baudrate settings(Linvor)
WSHH say 'metres' if metric set
Rotary encoder divide 2 option
Fix Bluetooth baudrate setting bug

******************************************
CHANGELOG: 27-Aug-2012  MPB
Use voice files 400-499
Fix voice output for timers and other things
Add voice file 58 - NO TELEMETRY
Fix Cvlt display
More rotary encoder functionality
BT debug display

******************************************
CHANGELOG: 22-Aug-2012  MPB
Action USB on boot, disable USB after 10 seconds power on

******************************************
CHANGELOG: 13-Aug-2012  MPB
Fix throttle warning when reversed bug

******************************************
CHANGELOG: 07-08-2012 MPB
Add retries to reading the SD card SCR register
